Bug 456780 - Fails to build on Windows 10 with mingw
Summary: Fails to build on Windows 10 with mingw
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kservice
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.96.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-15 23:08 UTC by george fb
Modified: 2022-07-16 19:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
log from craft -i kservice (15.58 KB, text/plain)
2022-07-15 23:08 UTC, george fb
Details

Note You need to log in before you can comment on or make changes to this bug.
Description george fb 2022-07-15 23:08:57 UTC
Created attachment 150662 [details]
log from craft -i kservice

This commit https://invent.kde.org/frameworks/extra-cmake-modules/-/commit/25bbb2a4776d36b542857709bb0448a7ea030b59 in extra-cmake-modules causes kservice to not build on Windows 10 using craft with mingw.

STEPS TO REPRODUCE
1. Install craft
2. Try to build kservice

OBSERVED RESULT
Build fails

EXPECTED RESULT
Build succeeds

SOFTWARE/OS VERSIONS
Windows: 10
KDE Frameworks Version: 5.96
Qt Version: 5.15.5
Comment 1 Bug Janitor Service 2022-07-16 09:26:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kservice/-/merge_requests/93
Comment 2 Nicolas Fella 2022-07-16 19:47:21 UTC
Git commit 7b062919a4a33cf9fa16140ec16cfa5484a1b6fd by Nicolas Fella.
Committed on 16/07/2022 at 09:26.
Pushed by nicolasfella into branch 'master'.

Define HAVE_MMAP to 0 instead of undefining it

We expect it to be defined to 0 if unavailable

Otherwise we fail when building with -Werror=undef

M  +1    -1    src/sycoca/ksycocadevices_p.h

https://invent.kde.org/frameworks/kservice/commit/7b062919a4a33cf9fa16140ec16cfa5484a1b6fd