Define HAVE_MMAP to 0 instead of undefining it

We expect it to be defined to 0 if unavailable

Otherwise we fail when building with -Werror=undef

BUG: 456780